Fix changelog. Bump version to 0.1.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.0.0
+Version: 0.1.1
+  Bugfixes:
+    - Fix and improve logic for energy/time.
+---------------------------------------------------------------------------------------------------
+Version: 0.1.0
   Features:
     - Initial Release.
