Fix default emissions_per_minute not being 0.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3
+  Fixes:
+    - Fix default emissions_per_minute not being 0.
+---------------------------------------------------------------------------------------------------
 Version: 0.2.2
   Fixes:
     - Fix compatibility with pypostprocessing
