--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Version: 0.3
   Fixes:
     - Fix default emissions_per_minute not being 0.
+  Features:
+    - Allow specifying emissions.
+    - Allow results in generators.
+    - Allow setting energy usage priority.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
   Fixes:
